fixes gap between Project images and the textbox, when less than max-width 415px

--- a/client/styling/main.scss
+++ b/client/styling/main.scss
@@ -255,11 +255,16 @@ body {
   }
 
   .img-main-project {
+    background-position: center top;
     background-size: cover;
     background-repeat: no-repeat;
     height: 400px;
     max-width: 700px;
     margin: 0 auto;
+  }
+
+  .diningWithTheStars1 {
+    background-position: left top;
   }
 
   .project-text-row {
