--- a/client/styling/mainMediaQueries.scss
+++ b/client/styling/mainMediaQueries.scss
@@ -198,6 +198,14 @@ body {
       height: 250px;
     }
 
+    .diningWithTheStars1 {
+      background-position: center top;
+    }
+
+    .smashbots1, .techTalkPaperJS1 {
+      height: 218px;
+    }
+
     .headshotBackground {
       height: 300px;
     }
